--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@apollo/client": "^3.6.9",
     "graphql": "^16.6.0",
+    "moment": "^2.29.4",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
+    "react-moment": "^1.1.2",
     "zustand": "^4.1.1"
   },
   "devDependencies": {
