--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.35.0",
     "react-icons": "^4.4.0",
     "react-moment": "^1.1.2",
     "zustand": "^4.1.1"
